# cuda-ipc-memory-manager

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build-test.yml
api/: API.cpp  API.h  CMakeLists.txt  CudaIpcMemoryManagerAPI.cpp  CudaIpcMemoryManagerAPI.h  CudaIpcMemoryRequestAPI.cpp  CudaIpcMemoryRequestAPI.h
example/: CMakeLists.txt  CreateBufferExample.cpp  CreateBufferExample.cu  FreeBufferExample.cpp  FreeBufferExample.cu  GetBufferExample.cpp  GetBufferExample.cu  GetInfoExample.cpp
flatbuffers/: CMakeLists.txt  api.fbs  service.fbs
observability/grafana/provisioning/dashboards/: cuda-ipc-memory-manager.json
observability/prometheus/: prometheus.yml
schema/: CMakeLists.txt  api.fbs  service.fbs
schema/api/: common.fbs  rpc_request.fbs  rpc_response.fbs
schema/fbs/: service.fbs
schema/fbs/api/: common.fbs  rpc_request.fbs  rpc_response.fbs
service/: CMakeLists.txt
service/config/: 1_gpu.tpl  2_gpu.tpl  config.tpl  one.gpu.tpl  two.gpu.tpl
service/src/: ConfigParser.hpp  CudaIPCServer.cpp  CudaIPCServer.h  GPUBufferMultiIndex.h  GpuMetricsCollector.cpp  GpuMetricsCollector.h  Main.cpp  ProcessMetricsCollector.hpp
service/src/thread/: CudaIPCServer.cpp  CudaIPCServer.h  CudaUtils.cu  CudaUtils.h
tests/: CMakeLists.txt  CudaIpcMemoryManagerAPITest.cpp
util/: CMakeLists.txt  CudaUtils.cu  CudaUtils.h  UUIDConverter.hpp
util/tests/: CMakeLists.txt  CudaUtilsTest.cpp  UUIDConverterTest.cpp
